// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements inside input render correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-input__group css-3lf2mu"
  >
    <div
      class="chakra-input__left-element css-glbml6"
    >
      <span>
        Hello
      </span>
    </div>
    <input
      class="chakra-input css-6pjrhx"
    />
    <div
      class="chakra-input__right-element css-6f5ody"
    >
      <span>
        World
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input addons render correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-input__group css-3lf2mu"
  >
    <div
      class="chakra-input__left-addon css-yxu4h4"
    >
      https://
    </div>
    <input
      class="chakra-input css-6pjrhx"
    />
    <div
      class="chakra-input__right-addon css-qet1fj"
    >
      .com
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input renders correctly 1`] = `
<DocumentFragment>
  <input
    class="chakra-input css-6pjrhx"
  />
</DocumentFragment>
`;
